fix: add fixed height on the base to prevent flicker

--- a/packages/components/src/components/telekom/telekom-header/telekom-header.css
+++ b/packages/components/src/components/telekom/telekom-header/telekom-header.css
@@ -26,6 +26,7 @@
   --font-weight-app-name: var(--telekom-typography-font-weight-extra-bold);
 
   --_height: 60px;
+  --_base-height: 60px;
   --_height-logo-svg: 36px;
   --_height-bottom-bar: 60px;
   --_height-top-bar: 0;
@@ -68,6 +69,8 @@
   :host,
   :host([scrolled-back]) {
     --_height: 84px;
+    --_base-height: 84px;
+
     --_height-logo-svg: 44px;
     --_height-top-bar: 30px;
     --_height-bottom-bar: 54px;
@@ -89,7 +92,6 @@
 
     --scl-telekom-header-height: var(--_height);
 
-    --_scrolled-offset: 12px
   }
 
   :host([type='slim']) {
@@ -99,25 +101,6 @@
     );
   }
 
-  :host([scrolled])::after{
-    content: '';
-    height: var(--_scrolled-offset);
-    display: block;
-  }
-
-  @media screen and (--xl) {
-    :host {
-      --_scrolled-offset: 24px
-    }
-  } 
-
-  @media screen and (--2xl) {
-    :host {
-      --_scrolled-offset: 48px
-    }
-  } 
-  
-
   :host([type='slim'][scrolled]) {
     --_spacing-right-bottom-app-name: var(
       --telekom-spacing-composition-space-07
@@ -126,6 +109,7 @@
   :host([type='slim']),
   :host([scrolled]) {
     --_height: 72px;
+
     --_height-logo-svg: 40px;
     --_height-top-bar: 0;
     --_height-bottom-bar: 72px;
@@ -152,6 +136,8 @@
   :host,
   :host([scrolled-back]) {
     --_height: 96px;
+    --_base-height: 96px;
+
     --_height-logo-svg: 48px;
     --_height-top-bar: 30px;
     --_height-bottom-bar: 66px;
@@ -161,6 +147,9 @@
 
   :host([type='slim']) {
     --_height: 84px;
+    --_base-height: 84px;
+
+
     --_height-logo-svg: 44px;
     --_height-top-bar: 0;
     --_height-bottom-bar: 84px;
@@ -185,6 +174,8 @@
   :host,
   :host([scrolled-back]) {
     --_height: 120px;
+    --_base-height: 120px;
+
     --_height-logo-svg: 60px;
     --_height-top-bar: 30px;
     --_height-bottom-bar: 90px;
@@ -203,6 +194,8 @@
 
   :host([type='slim']) {
     --_height: 96px;
+    --_base-height: 96px;
+
     --_height-logo-svg: 48px;
     --_height-top-bar: 0;
     --_height-bottom-bar: 96px;
@@ -224,6 +217,7 @@
 
   :host([type='slim'][scrolled]) {
     --_height: 72px;
+
     --_height-logo-svg: 40px;
     --_height-top-bar: 0;
     --_height-bottom-bar: 72px;
@@ -291,7 +285,8 @@ slot[name='functions'] {
 }
 
 [part~='base'] {
-  height: var(--_height);
+  /* height: var(--_height); */
+  height: var(--_base-height);
   width: 100%;
   transition: var(--transition-common-scrolled);
 }
